<resources>
    <string name="app_name">Pontos Turisticos</string>
    <string name="open">Aberto</string>
    <string name="close">Fechado</string>
    <string name="todo">TODO</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="logar">Logar</string>
    <string name="txt_sem_conta">Não tem conta? Cadastre-se</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_belvedere_map">Map</string>
    <string name="textView_Telefone_Turismo">(75) 3281-3011</string>
    <string name="textView_Site_Turismo">http://www.pauloafonso.ba.gov.br</string>
    <string name="nav_explorar">Explorar</string>
    <string name="nav_infos">Info</string>
    <string name="txt_lazer">Paulo Afonso é uma cidade cheia de atrativos naturais, porém, ao chegar na cidade, já é notório o cuidado com o qual a cidade foi crescendo. Temos belas praças, dentre elas, a Praça das Mangueiras é um ponto onde não se pode deixar de ir e tirar belíssimas fotos. Temos também a Praça da Tribuna, onde aconteciam várias manifestações culturais. O calçadão da Av. Getúlio Vargas é um belo lugar para apreciar os bares, lanchonetes e uma grande quantidade de lojas. O Parque Belvedere é um lugar super aconchegante, onde as famílias costumam sentar debaixo das belas sombras e fazer pique nique, levar as crianças pra lanchar, tomar sorvete ou brincar no pula-pula.</string>
</resources>
