<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="tg2.com.local.pauloafonso.pontosturisticos.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo_patur" />

    <EditText
        android:id="@+id/txt_login_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/digite_seu_e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_login_senha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_login_email"
        android:layout_below="@+id/txt_login_email"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_logar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_login_senha"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/cor_botao"
        android:text="@string/logar"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txt_login_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_logar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/txt_sem_conta"
        android:textSize="18sp" />
</RelativeLayout>
